refactor: make use of virtual threads and fibers in java rx (closes #8)